# TestsTalk

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
.github/workflows/: Test.yml
1. Oscillator/: CMakeLists.txt  Oscillator.h  OscillatorTestConstants.h  OscillatorTests.cpp  OscillatorUtilities.h  Phasor.h  PhasorTests.cpp  WaveformTests.cpp
1. Oscillator/Examples/: CMakeLists.txt
1. Oscillator/Examples/1. A Simple Test/: Oscillator.h  OscillatorTests.cpp
1. Oscillator/Examples/2. A Better Perform Test/: Oscillator.h  OscillatorTests.cpp
1. Oscillator/Examples/3. Changing the Sampling Rate/: Oscillator.h  OscillatorTests.cpp
1. Oscillator/Examples/4. Changing the Frequency/: Oscillator.h  OscillatorTests.cpp
2. Filters/: CMakeLists.txt  FilterMeasurementUtilities.h  FilterTestUtilities.h  FilterTests.cpp  SpectrumComparators.h
2. Filters/FilterTests/: AllpassFilterTests.cpp  BandpassFilterTests.cpp  BandrejectFilterTests.cpp  HighShelfFilterTests.cpp  HighpassFilterTests.cpp  LowShelfFilterTests.cpp  LowpassFilterTests.cpp  PeakFilterTests.cpp
2. Filters/Signal Analysis/: Signal Analyzers.h  UtilsTest.cpp
2. Filters/Signal Analysis/FFT/: FFT.h  FFTTests.cpp
Utilities/: DecibelMatcherTests.cpp  DecibelMatchers.h  Lerp.h  Random.h  RandomTests.cpp
